--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -64,8 +64,14 @@
                            text="Welcome to My Shelfie!&#13;Please enter your nick name to start playing"
                            textAlignment="CENTER" wrapText="true"/>
 
-                    <GridPane fx:id="inputContainer" styleClass="input-container" GridPane.rowIndex="1"
-                              GridPane.columnIndex="0"
+                    <Label fx:id="playerNumberText" styleClass="welcome-text" GridPane.fillWidth="true"
+                           GridPane.fillHeight="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                           GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" alignment="CENTER" contentDisplay="CENTER"
+                           prefHeight="${infoContainer.height / 0.6}" prefWidth="${infoContainer.width}"
+                           text="Choose the maximum number of player in the game" visible="false" disable="true"
+                           textAlignment="CENTER" wrapText="true"/>
+
+                    <GridPane fx:id="inputContainer" GridPane.rowIndex="1" GridPane.columnIndex="0"
                               GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.hgrow="ALWAYS"
                               GridPane.vgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.halignment="CENTER"
                               prefHeight="${infoContainer.height / 0.4}" prefWidth="${infoContainer.width}"
@@ -92,12 +98,13 @@
                                    maxWidth="${inputContainer.width * 0.66}" minHeight="1.0" minWidth="1.0"
                                    onKeyPressed="#textFieldKeyPressed"/>
 
-                        <Button fx:id="joinButton" styleClass="action-button" GridPane.halignment="CENTER"
-                                GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
-                                GridPane.columnIndex="2" GridPane.rowIndex="1" text="join game"
-                                onMouseClicked="#joinGameSubmitted" onMouseEntered="#joinGameButtonEntered"
-                                onMouseExited="#joinGameButtonExited" disable="true" alignment="CENTER" cache="true"
-                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"/>
+                        <TextField fx:id="playerNumberInput" styleClass="nick-input" alignment="CENTER"
+                                   focusTraversable="false" promptText="Players number" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                                   GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.columnSpan="2"
+                                   maxHeight="${inputContainer.height * 0.47}" maxWidth="${inputContainer.width * 0.66}"
+                                   minHeight="1.0" minWidth="1.0" onKeyPressed="#textFieldKeyPressed" visible="false"
+                                   disable="true"/>
 
                         <Button fx:id="createButton" styleClass="action-button" GridPane.halignment="CENTER"
                                 GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
@@ -105,6 +112,21 @@
                                 onMouseClicked="#createGameSubmitted" onMouseEntered="#createGameButtonEntered"
                                 onMouseExited="#createGameButtonExited" disable="true" alignment="CENTER" cache="true"
                                 wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"/>
+
+                        <Button fx:id="joinButton" styleClass="action-button" GridPane.halignment="CENTER"
+                                GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
+                                GridPane.columnIndex="2" GridPane.rowIndex="1" text="join game"
+                                onMouseClicked="#joinGameSubmitted" onMouseEntered="#joinGameButtonEntered"
+                                onMouseExited="#joinGameButtonExited" disable="true" alignment="CENTER" cache="true"
+                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"/>
+
+                        <Button fx:id="playerNumberButton" styleClass="action-button" GridPane.halignment="CENTER"
+                                GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
+                                GridPane.columnIndex="1" GridPane.rowIndex="1" text="Submit"
+                                onMouseClicked="#playerNumberSubmitted" onMouseEntered="#playerNumberButtonEntered"
+                                onMouseExited="#playerNumberButtonExited" disable="true" alignment="CENTER" cache="true"
+                                wrapText="true" minHeight="1.0" maxHeight="${inputContainer.height * 0.47}"
+                                GridPane.columnSpan="2" visible="false"/>
                     </GridPane>
                 </GridPane>
             </AnchorPane>
